Hooked up button click function

--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <html>
   <head>
+    <script>
+function onButtonClick()
+{
+  alert("Hello World!");
+}
+
+    </script>
   </head>
   <body>
     Hello
+    <input onclick="onButtonClick();" type="button" value="Click me"></input>
   </body>
 </html>
