Updated links / wording.

--- a/flow.html
+++ b/flow.html
@@ -410,6 +410,12 @@ with other UI systems.
   }
 </pre></div>
 
+Hopefully this tutorial has given you some insight into how Flow
+works. You may have even noticed that we did not actually need the
+Separator Widgets in order to achieve the layout we created. Your next
+step could be to have a look at some of the <a href="todo.html">examples</a>
+and finally to <a href="todo.html">download</a> Iffe and have a play.
+
 </section>
 
       <row style="border-top: 1px solid black; padding: 0.5rem">
