--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ a number of project aims, including:
   <li style="margin: 0.5rem 0">
 
 <span style="font-weight: bold">C89+</span> ensures that the code is kept simple and maximizes portability. Even
-to older platforms.
+to older platforms or those with very early C support.
 
   </li>
   <li style="margin: 0.5rem 0">
@@ -228,7 +228,7 @@ package managers from making a mess.
   <li style="margin: 0.5rem 0">
 
 <span style="font-weight: bold">Provide simple layout system</span> and avoid tooling ensures that
-building UIs remains fast and fun.
+building UIs remains fast and fun even during maintenance.
 
   </li>
   <li style="margin: 0.5rem 0">
@@ -275,8 +275,8 @@ files when C can serve the task in a simpler way.
   <li style="margin: 0.5rem 0">
 
 Future maintenance should be simple. No need to maintain old build
-systems just to support a specific preprocessor should be needed. Instead
-a standards compliant C compiler should be all that is necessary.
+systems just to support a specific preprocessor tool. Instead a standards
+compliant C compiler should be all that is necessary.
 
   </li>
   <li style="margin: 0.5rem 0">
@@ -289,7 +289,9 @@ should be quick to follow and natural to implement.
 </ul>
 
 Check out the <a href="flow.html">Flow Tutorial</a> for more information
-and then take a look at some of the examples.  </note_section>
+and then take a look at some of the <a href="todo.html">examples</a>.
+
+</note_section>
 
 <section>
 <div style="font-weight: bold; font-size: 1.5rem; margin-bottom: 0.5rem">Introducing the Stent Memory Checker (libstent)</div>
@@ -311,37 +313,37 @@ following features:
 <ul>
   <li style="margin: 0.5rem 0">
 
-100% checked heap usage in debug builds ensures that the program
+<span style="font-weight: bold">100% checked heap usage</span> in debug builds ensures that the program
 aborts with useful information about the mistake immediately and in a
 deterministic manner.
 
   </li>
   <li style="margin: 0.5rem 0">
 
-Type-safe weak pointer in the debug build (similar to C++
+<span style="font-weight: bold">Type-safe weak pointer</span> in the debug build (similar to C++
 std::weak_ptr&lt;T&gt;). Once testing has been done, this can be stripped
 in the release build ensuring there is zero additional overhead.
 
   </li>
   <li style="margin: 0.5rem 0">
 
-Type-safe dynamic arrays (similar to C++ std::vector&lt;T&gt;). In both
+<span style="font-weight: bold">Type-safe dynamic arrays</span> (similar to C++ std::vector&lt;T&gt;). In both
 the debug and release builds this container greatly simplifies memory
 access in heap arrays and eliminates a range of programming mistakes.
 
   </li>
   <li style="margin: 0.5rem 0">
 
-Leak checker in the debug build notifies the programmer upon exit of any
-allocations which were not subsequently freed along with their type and
-location in code where they were allocated.
+<span style="font-weight: bold">Leak checker</span> in the debug build notifies the programmer upon
+exit of any allocations which were not subsequently freed along with
+their type and location in code where they were allocated.
 
   </li>
   <li style="margin: 0.5rem 0">
 
-100% portable C89+. No need for a specific compiler or platform. For
-example, no reliance on address sanitation support in your compiler or
-the ability to lock virtual memory.
+<span style="font-weight: bold">100% portable C89+</span>. No need for a specific compiler or
+platform. For example, no reliance on address sanitation support in your
+compiler or the ability to lock virtual memory.
 
   </li>
 </ul>
@@ -351,9 +353,10 @@ encouraged that it is used for many C projects, even those entirely
 unrelated to UI. Of course Iffe can also be used without the memory
 checker. In this case standard raw pointers can be used as normal.
 
-Check out the Stent tutorial for detailed information on how it works. All
-the examples also use Stent but if you want to use Iffe directly without
-it, you can check out this specific example here.
+Check out the <a href="todo.html">Stent Tutorial</a> for detailed
+information on how it works. All the examples also use Stent but if you
+want to use Iffe directly without it, you can check out a specific
+example <a href="todo.html">here</a> demonstrating a raw usage of Iffe.
 
 </section>
 
